--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,24 +8,30 @@
     <title>EsToDoList</title>
 </head>
 
-<body class="flex justify-center items-start pt-12 min-h-screen bg-gray-100 dark:bg-zinc-800 text-zinc-700 dark:text-lime-100">
-    <main class="flex flex-col w-full max-w-sm lg:max-w-lg p-6 bg-white dark:bg-zinc-600 border border-gray-300 rounded-lg shadow-xl">
+<body
+    class="flex justify-center items-start pt-12 min-h-screen bg-gray-100 dark:bg-zinc-800 text-zinc-700 dark:text-lime-100">
+    <main
+        class="flex flex-col w-full max-w-sm lg:max-w-lg p-6 bg-white dark:bg-zinc-600 border border-gray-300 rounded-lg shadow-xl">
         <h1 class="text-center text-3xl font-bold mb-6 text-gray-200" style="font-family: 'Comic Sans MS';">
             EsToDoList
         </h1>
         <!-- Área de inclusão de novas tarefas -->
         <div class="flex mb-6 space-x-2">
-            <input
-                type="text"
-                id="nova-tarefa-input"
-                placeholder="Digite uma tarefa..."
+            <input type="text" id="nova-tarefa-input" placeholder="Digite uma tarefa..."
                 class="flex-grow p-3 border border-gray-400 rounded-lg text-zinc-600 placeholder-gray-300 focus:outline-none focus:ring-2 focus:ring-green-500">
             <button id="adicionar-tarefa-btn"
-                class="flex-shrink-0 w-12 h-12 bg-lime-500 hover:bg-lime-700 text-white text-2x1 font-bold rounded-lg transition duration-150 ease-in-out shadow-md">+
-            </button>
+        class="flex items-center justify-center flex-shrink-0 w-12 h-12 bg-lime-500 hover:bg-lime-700 text-white text-2xl font-bold rounded-lg transition duration-150 ease-in-out shadow-md">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+         stroke="currentColor" class="w-6 h-6">
+        <path stroke-linecap="round" stroke-linejoin="round"
+              d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+    </svg>
+</button>
+
         </div>
         <!-- Fim de inclusão de tarefas -->
-         
+
     </main>
 </body>
+
 </html>
