--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 
         <!-- Área de Tarefas -->
-        <ul id="lista-de-tarefas" class="scape-y-3">
+        <ul id="lista-de-tarefas" class="scape-y-3 ">
             <li class="flex justify-between items-center p-3 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out">
-                <span class="text-zinc-700 flex-grow">Tarefa 1</span>
+                <span class="text-zinc-700 dark:text-lime-100">Tarefa 1</span>
                 <div>
                     <button class="p-2 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-6">
@@ -52,7 +52,7 @@
                 </div>
             </li>
             <li class="flex justify-between items-center p-3 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out">
-                <span class="text-zinc-700 flex-grow">Tarefa 2</span>
+                <span class="text-zinc-700 dark:text-lime-100">Tarefa 2</span>
                 <div>
                     <button class="p-2 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-6">
@@ -69,7 +69,7 @@
                 </div>
             </li>
             <li class="flex justify-between items-center p-3 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out">
-                <span class="text-zinc-700 flex-grow">Tarefa 3</span>
+                <span class="text-zinc-700 dark:text-lime-100">Tarefa 3</span>
                 <div>
                     <button class="p-2 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="size-6">
@@ -91,9 +91,15 @@
         <hr class="my-6 border-zinc-700 dark:border-zinc-100">
 
         <div class="flex-grow relative">
-            <input type="text"
-            id="pesquisa-input">
-            <select name="" id="">
+            <input type="text" id="pesquisa-input" placeholder=" Pesquise..."
+            class="w-2/3 p-3 pl-5 border border-zinc-400 rounded-lg text-zinc-700 placeholder-zinc-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
+            <select name="" id="filtro-select"
+            class="p-3 border border-zinc-400 rounded-lg bg-white text-zinc-700
+            focus:outline-none focus:ring-2 focus:ring-blue-500"
+            >
+            <option value="todos">Todos</option>
+            <option value="ativos">Ativos</option>
+            <option value="concluidos">Concluidos</option>
                 
             </select>
         </div>
