--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 </head>
 
 <body
-    class="flex justify-center items-start pt-12 min-h-screen bg-gray-100 dark:bg-zinc-800 text-zinc-700 dark:text-lime-100">
+    class="flex justify-center items-start pt-12 min-h-screen bg-gray-100 dark:bg-zinc-800 text-zinc-900 dark:text-zinc-100">
     <main
         class="flex flex-col w-full max-w-sm lg:max-w-lg p-6 bg-white dark:bg-zinc-600 border border-gray-300 rounded-lg shadow-xl">
-        <h1 class="text-center text-3xl font-bold mb-6 text-gray-200" style="font-family: 'Comic Sans MS';">
+        <h1 class="text-center text-3xl font-bold mb-6 text-zinc-900 dark:text-zinc-100" style="font-family: 'Comic Sans MS';">
             EsToDoList
         </h1>
         <!-- Área de inclusão de novas tarefas -->
         <div class="flex mb-6 space-x-2">
             <input type="text" id="nova-tarefa-input" placeholder="Digite uma tarefa..."
-                class="flex-grow p-3 border border-gray-400 rounded-lg text-zinc-600 placeholder-gray-300 focus:outline-none focus:ring-2 focus:ring-green-500">
-            <button id="adicionar-tarefa-btn"
+                class="flex-grow p-3 border border-gray-400 rounded-lg text-zinc-900 dark:text-zinc-100 placeholder-gray-400 dark:placeholder-zinc-300 focus:outline-none focus:ring-2 focus:ring-green-500">
+            <!-- id ajustado para 'adicionar-btn' para coincidir com script.js -->
+            <button id="adicionar-btn"
                 class="flex items-center justify-center flex-shrink-0 w-12 h-12 bg-lime-500 hover:bg-lime-700 text-white text-2xl font-bold rounded-lg transition duration-150 ease-in-out shadow-md">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" class="w-6 h-6">
@@ -33,78 +34,31 @@
 
 
         <!-- Área de Tarefas -->
-        <ul id="lista-de-tarefas" class="scape-y-3 ">
-            <li class="flex justify-between items-center p-3 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out">
-                <span class="text-zinc-700 dark:text-lime-100">Tarefa 1</span>
-                <div>
-                    <button class="p-2 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
-                        </svg>
-                    </button>
-                    <button class="p-2 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                        </svg>
-                    </button>
-                </div>
-            </li>
-            <li class="flex justify-between items-center p-3 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out">
-                <span class="text-zinc-700 dark:text-lime-100">Tarefa 2</span>
-                <div>
-                    <button class="p-2 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
-                        </svg>
-                    </button>
-                    <button class="p-2 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                        </svg>
-                    </button>
-                </div>
-            </li>
-            <li class="flex justify-between items-center p-3 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out">
-                <span class="text-zinc-700 dark:text-lime-100">Tarefa 3</span>
-                <div>
-                    <button class="p-2 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
-                        </svg>
-                    </button>
-                    <button class="p-2 border border-green-100 rounded-lg shadow-sm cursor-pointer transition duration-150 ease-in-out"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                        </svg>
-                    </button>
-                </div>
-            </li>
+        <ul id="lista-de-tarefas" class="space-y-3">
+        
         </ul>
         <!-- Fim da área de tarefas -->
 
-        <hr class="my-6 border-zinc-700 dark:border-zinc-100">
+        <hr class="my-6 border-zinc-300 dark:border-zinc-500">
 
         <div class="flex-grow relative">
             <input type="text" id="pesquisa-input" placeholder=" Pesquise..."
-            class="w-2/3 p-3 pl-5 border border-zinc-400 rounded-lg text-zinc-700 placeholder-zinc-500 focus:outline-none focus:ring-2 focus:ring-blue-500">
+            class="w-2/3 p-3 pl-5 border border-zinc-400 rounded-lg text-zinc-900 dark:text-zinc-100 placeholder-zinc-500 dark:placeholder-zinc-300 focus:outline-none focus:ring-2 focus:ring-blue-500">
             <select name="" id="filtro-select"
-            class="p-3 border border-zinc-400 rounded-lg bg-white text-zinc-700
+            class="p-3 border border-zinc-400 rounded-lg bg-white dark:bg-zinc-700 text-zinc-900 dark:text-zinc-100
             focus:outline-none focus:ring-2 focus:ring-blue-500"
             >
             <option value="todos">Todos</option>
             <option value="ativos">Ativos</option>
             <option value="concluidos">Concluidos</option>
-                
+
             </select>
         </div>
 
     </main>
+
+    <!-- inclusão do script -->
+    <script src="script.js"></script>
 </body>
 
 </html>
