--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>EsToDoList</title>
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/6742/6742656.png" type="image/x-icon">
 </head>
 
 <body
@@ -14,6 +15,7 @@
         class="flex flex-col w-full max-w-sm lg:max-w-lg p-6 bg-white dark:bg-zinc-600 border border-gray-300 rounded-lg shadow-xl">
         <h1 class="text-center text-3xl font-bold mb-6 text-zinc-900 dark:text-zinc-100" style="font-family: 'Comic Sans MS';">
             EsToDoList
+            
         </h1>
         <!-- Área de inclusão de novas tarefas -->
         <div class="flex mb-6 space-x-2">
